<resources>
    <string name="app_name">My First App</string>
    <string name="action_settings">Settings</string>
    <string name="edit_message">Enter a message</string>
    <string name="button_send">Send</string>
    <string name="heading">Profiles</string>
    <string name="Email">Enter Email</string>
    <string name="Password">Enter Password</string>
    <string name="button_sign_up">Sign Up</string>
    <string name="button_sign_in">Sign In</string>
    <string name="have_account">I already have an account</string>
    <string name="forgot_password">I can\'t remember my password</string>
    <string name="dont_have_account">I don\'t have an account</string>
    <string name="did_forget_password">Did you forget your password?</string>
    <string name="send_password">Your password will be sent to the email address you enter</string>
    <string name="password_success_toast_msg">Your password was sent to you via email</string>
    <string name="password_failure_toast_msg">The email address you\'ve submitted is illegal</string>
    <string name="email_subject">Retrieve forgotten password for Lee\'s cool app</string>
    <string name="email_msg">Retrieve forgotten password for Lee\'s cool app</string>
    <string name="full_name">Enter Your Full Name</string>
    <string name="gravatar_base_url">https://www.gravatar.com/avatar/</string>
    <string name="firebase_url">https://firstapp-7066a.firebaseio.com/</string>
    <string name="reset_password">Reset Your Password</string>
    <string name="enter_new_password">Enter New Password</string>
    <string name="repeat_new_password">Repeat New Password</string>

</resources>
