<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/image_forgot_password"
        android:layout_width="100dp"
        android:layout_height="150dp"
        android:src="@mipmap/forgot_password_converted_burned"
        android:layout_gravity="center"
        android:layout_marginTop="30dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="20dp"
        android:text="@string/reset_password"
        android:textColor="#ec0b87"
        android:textSize="25sp"
        />

    <EditText
        android:id="@+id/new_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/enter_new_password"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="60dp"
        />

    <EditText
        android:id="@+id/repeat_new_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/repeat_new_password"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="25dp"
        />

    <Button
        android:id="@id/button_send"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/button_send"
        android:layout_marginTop="40dp"
        />





</LinearLayout>