<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent">

    <ImageView
    android:id="@+id/image_forgot_password"
    android:layout_width="100dp"
    android:layout_height="150dp"
    android:src="@mipmap/forgot_password_converted_burned"
    android:layout_gravity="center"
    android:layout_marginTop="30dp"/>



    <TextView
        android:id="@+id/did_forget_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="20dp"
        android:text="@string/did_forget_password"
        android:textColor="#ec0b87"
        android:textSize="25sp"
        />

    <EditText
        android:id="@+id/email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/Email"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="60dp"
        />

    <Button
        android:id="@+id/button_send"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/button_send"
        android:layout_marginTop="100dp"
        />



</LinearLayout>